# gcloud

./: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/v1/endpoints/: hello.py
app/core/: config.py  database.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  user.py
app/services/: user_service.py
docs/: system-architecture.md
helm/birthday-api/: Chart.yaml  values-kube-prometheus-stack.yaml  values.yaml
helm/birthday-api/templates/: _helpers.tpl  clustersecretstore.yaml  configmap.yaml  deployment.yaml  eso-serviceaccount.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
migrations/: env.py
migrations/versions/: 915079389c7e_create_users_table.py
scripts/: deploy-infrastructure.sh  dev.sh  init-db.sh  init-db.sql  test.sh
terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py
tests/test_api/: test_users.py
tests/test_models/: test_user.py
tests/test_services/: __init__.py  test_user_service.py
